[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[workspace]
resolver = "2"
members = [
  "rs-lib",
  "wasm",
]

[workspace.dependencies]
async-trait = "0.1.88"
deno_config = "0.61.0"
deno_error = { version = "0.6.1", features = ["serde", "serde_json", "url"] }
deno_path_util = "0.4.0"
deno_resolver = { version = "0.42.0", features = ["graph"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sys_traits = { version = "0.1.17", features = ["real"] }
url = { version = "2.5.4", features =["serde"] }
