[package]
name = "deno_node_transform"
version = "0.6.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/dnt"
description = "Deno to Node/canonical TypeScript transform."

[features]
default = ["serialization"]
serialization = ["serde"]

[dependencies]
anyhow = "1.0.70"
async-trait.workspace = true
base64 = "0.13.1"
deno_ast = { version = "0.48.1", features = ["transforms", "view", "visit", "utils"] }
deno_cache_dir.workspace = true
deno_config.workspace = true
deno_error.workspace = true
deno_graph.workspace = true
deno_path_util.workspace = true
deno_resolver.workspace = true
deno_semver = "0.7.1"
node_resolver = "0.49.0"
futures = "0.3.25"
import_map = { version = "0.22.0", features = ["ext"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
once_cell = "1.17.1"
pathdiff = "0.2.1"
regex = "1.7"
serde = { version = "1.0.159", features = ["derive"], optional = true }
serde_json.workspace = true
sys_traits.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions = "1.3.0"
sys_traits = { workspace = true, features = ["memory"] }
tokio = { version = "1", features = ["full"] }
