[package]
name = "dnt-wasm"
version = "0.0.0"
authors = ["the Deno authors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.51"
deno_config.workspace = true
deno_error.workspace = true
deno_path_util.workspace = true
dnt = { path = "../rs-lib", default-features = false, features = ["serialization"], package="deno_node_transform" }
getrandom = { version = "*", features = ["js"] }
js-sys = "=0.3.69"
sys_traits = { workspace = true, features = ["real", "wasm"] }
wasm-bindgen = { version = "=0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.42"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.5.0"
